changed output type to library

--- a/IntralismManiaConverter/IntralismManiaConverter.csproj
+++ b/IntralismManiaConverter/IntralismManiaConverter.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
+        <OutputType>Lib</OutputType>
         <TargetFramework>net5</TargetFramework>
     </PropertyGroup>
 
