--- a/IntralismManiaConverter/IntralismManiaConverter.csproj
+++ b/IntralismManiaConverter/IntralismManiaConverter.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>library</OutputType>
+        <OutputType>Library</OutputType>
         <TargetFramework>net5</TargetFramework>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>IntralismManiaConverter</Title>
