--- a/IntralismManiaConverter/IntralismManiaConverter.csproj
+++ b/IntralismManiaConverter/IntralismManiaConverter.csproj
@@ -1,35 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Library</OutputType>
-        <TargetFramework>net5</TargetFramework>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net5.0</TargetFramework>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>IntralismManiaConverter</Title>
         <Authors>Redageddon</Authors>
         <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Documentation.xml</DocumentationFile>
-        <PackageProjectUrl></PackageProjectUrl>
         <RepositoryUrl>https://github.com/rubiksmaster02/IntralismManiaConverter</RepositoryUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <NoWarn>SA1633</NoWarn>
+        <NoWarn>SA1633, SA1129, SA1106, SA1107, SA1009</NoWarn>
         <PackageVersion>1.0.1</PackageVersion>
         <Description>A tool that can convert mania maps to intralist and intralism maps to mania.</Description>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="NAudio" Version="1.10.0" />
-      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="OsuParsers" Version="1.6.5" />
       <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="xFFmpeg.NET" Version="3.4.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <None Update="Intralism.json">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
     </ItemGroup>
 
 </Project>
