--- a/IntralismManiaConverter/IntralismManiaConverter.csproj
+++ b/IntralismManiaConverter/IntralismManiaConverter.csproj
@@ -15,6 +15,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="morelinq" Version="3.3.2" />
       <PackageReference Include="NAudio" Version="1.10.0" />
       <PackageReference Include="OsuParsers" Version="1.6.5" />
       <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
