--- a/IntralismManiaConverter/IntralismManiaConverter.csproj
+++ b/IntralismManiaConverter/IntralismManiaConverter.csproj
@@ -9,7 +9,7 @@
         <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Documentation.xml</DocumentationFile>
         <RepositoryUrl>https://github.com/rubiksmaster02/IntralismManiaConverter</RepositoryUrl>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <NoWarn>SA1633, SA1129, SA1106, SA1107, SA1009</NoWarn>
+        <NoWarn>SA1633, SA1129, SA1106, SA1107, SA1009, SA1200</NoWarn>
         <PackageVersion>1.1.1</PackageVersion>
         <Description>A tool that can convert mania maps to intralist and intralism maps to mania.</Description>
     </PropertyGroup>
