--- a/IntralismManiaConverter/IntralismManiaConverter.csproj
+++ b/IntralismManiaConverter/IntralismManiaConverter.csproj
@@ -17,6 +17,7 @@
     <ItemGroup>
       <PackageReference Include="morelinq" Version="3.3.2" />
       <PackageReference Include="NAudio" Version="1.10.0" />
+      <PackageReference Include="NAudio.Vorbis" Version="1.2.0" />
       <PackageReference Include="OsuParsers" Version="1.6.5" />
       <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
         <PrivateAssets>all</PrivateAssets>
